[package]
name = "hello"
version = "0.1.0"
authors = ["linpingchuan <linpingchuan@uzoo.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2"
slog-stdlog = "3"
env_logger = "0.3.5"
slog-term = "2"
slog-async = "2"