[package]
name = "hello"
version = "0.1.0"
authors = ["linpingchuan <linpingchuan@uzoo.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pingchuan"
crate-type = ["staticlib"]
path = "src/lib.rs"

# Make sure to synchronize updates with Harness.
[dependencies]
protobuf = "2"
slog = "2.2"
slog-stdlog = "4"
slog-envlogger = "2.1.0"
slog-term = "2.4.0"
quick-error = "1.2.2"
raft-proto = "0.6.0-alpha"
# Stick with 0.6 (rather than 0.7) for now, since most of the ecosystem has not
# upgraded yet and this saves duplicate deps.
rand = "0.6.5"
hashbrown = "0.5"
fail = "0.3"
getset = "0.0.7"
criterion = "0.3.0"
regex = "1.1"
slog-async = "2.3.0"