[package]
build="build.rs"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-build/protobuf-codec"]
prost-codec = ["prost", "prost-derive", "bytes", "lazy_static", "protobuf-build/prost-codec"]

[build-dependencies]
protobuf-build = { version = "0.10", default-features = false }

[dependencies]
bytes = { version = "0.4.11", optional = true }
lazy_static = { version = "1.3.0", optional = true }
prost = { version = "0.5", optional = true }
prost-derive = { version = "0.5", optional = true }
protobuf = "2"